[package]
name = "tigon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
intmap = "2.0.0"
ndarray = "0.15.6"
rand = "0.8.5"
shakmaty = { version = "0.25.0", features=["variant"], git = "https://github.com/UE2020/shakmaty.git"}
tch = "0.10.1"
vampirc-uci = { version = "0.11.1", git = "https://github.com/UE2020/vampirc-uci.git" }
