[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nn"
path = "src/lib.rs"

[[bin]]
name = "trainer"
path = "src/bin.rs"

[dependencies]
shakmaty = { version = "0.26.0" }
dfdx = { version = "0.11.2", features = ["nightly", "numpy"] }
indicatif = "0.17.5"
rand = "0.8.5"
ndarray = "0.15.6"
pgn-reader = "0.25.0"
tensorboard-rs = "0.5.9"
